Blacklist SteelSeries Nimbus in platform data fetcher

The SteelSeries Nimbus is a Made For iOS (MFi) gamepad. In Chrome for
Mac, MFi gamepads are enumerated through the GameController framework.
The Nimbus is also detected as a generic USB HID device, which are
enumerated by GamepadPlatformDataFetcherMac. To prevent the gamepad
from being enumerated by both data fetchers and taking an extra gamepad
slot, the vendor/product ID pair for the Nimbus is blacklisted in the
platform data fetcher.

BUG=775268

Change-Id: Idf8510663ab15b0c11c1b0dd712f3889383e6894
Reviewed-on: https://chromium-review.googlesource.com/722522
Reviewed-by: Brandon Jones <bajones@chromium.org>
Commit-Queue: Matt Reynolds <mattreynolds@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509470}
Former-commit-id: 35f6d48ddeba543ffdd46fe0c91d6c0b358e8bbf