device/gamepad/gamepad_platform_data_fetcher_mac.mm
@@ -66,6 +66,9 @@ const uint32_t kGameUsageNumber = 0x05;
 const uint32_t kMultiAxisUsageNumber = 0x08;
 const uint32_t kAxisMinimumUsageNumber = 0x30;
 
+const int kVendorSteelSeries = 0x1038;
+const int kProductNimbus = 0x1420;
+
 }  // namespace
 
 GamepadPlatformDataFetcherMac::GamepadPlatformDataFetcherMac()
@@ -318,6 +321,12 @@ void GamepadPlatformDataFetcherMac::DeviceAdd(IOHIDDeviceRef device) {
   int vendor_int = [vendor_id intValue];
   int product_int = [product_id intValue];
   int version_int = [version_number intValue];
+
+  // The SteelSeries Nimbus and other Made for iOS gamepads should be handled
+  // through the GameController interface. Blacklist it here so it doesn't
+  // take up an additional gamepad slot.
+  if (vendor_int == kVendorSteelSeries && product_int == kProductNimbus)
+    return;
 
   char vendor_as_str[5], product_as_str[5], version_as_str[5];
   snprintf(vendor_as_str, sizeof(vendor_as_str), "%04x", vendor_int);
